# ProductStar-HW

./: .gitignore  .pre-commit-config.yaml  README.md  zOOP.py
architecture-and-server/Architecture-and-backend-homework/: README.md  app.py  countsapi.py  generatepayload.py  pyproject.toml
eshop_app/: main.py  readme.md
eshop_app/app/: main.py
eshop_app/app/data/: order_repo.py  product_repo.py
eshop_app/app/logic/: order_logic.py  product_logic.py
eshop_app/app/model/: order.py  product.py
eshop_app/app/view/: order_schemas.py  product_schemas.py  server.py
files/: 22-05-25hw1.py  22-05-25hw2.py
front/react/my-app/: README.md
front/react/my-app/src/: App.js
front/react/my-app/src/components/: Dice.css  Dice.js  Gallery.css  Gallery.js
sql_alchemy/: app.py  database.py  readme.md
sql_alchemy/instance/: library.db
sql_alchemy/templates/: all_books.html  books_by_genre.html  layout.html
